--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,1 +1,4 @@
-idf_component_register(SRCS "main.c" INCLUDE_DIRS "")
+idf_component_register(
+    SRCS "main.c" "stream.c" "wifi.c"
+    INCLUDE_DIRS ""
+)
