feat: convert fen to board position

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
-    SRCS "main.c" "stream.c" "wifi.c" "cJSON.c"
+    SRCS "main.c" "stream.c" "wifi.c" "controller.c" "position.c" "cJSON.c"
     INCLUDE_DIRS ""
 )
